-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.4.2
-
None
-
-
a80fd4a0a (dev), ffd7b0890 (dev), a24d805c1 (6.8)
The VideoOutput is missing the flush mode property that was added in 5.13: https://doc.qt.io/qt-5/qml-qtmultimedia-videooutput.html#flushMode-prop
"Set this property to define what VideoOutput should show when playback is finished or stopped.
- EmptyFrame - clears video output.
- FirstFrame - shows the first valid frame.
- LastFrame - shows the last valid frame."
This feature is crucial for video players or playing videos one by one in digital signage to avoid flickering. Trying to hook in to EndOfMedia signals of MediaPlayer to set pause / seek is unreliable.
- relates to
-
QTBUG-107067 Qt6 Video element: Make transitions between different sources smooth
-
- Closed
-
| For Gerrit Dashboard: QTBUG-110310 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 519103,8 | Add API for enabling/disabling of video output auto flushing | dev | qt/qtmultimedia | Status: ABANDONED | 0 | 0 |
| 519462,5 | Propose API to ignore invalid frames in QVideoSink and VideoOutput | dev | qt/qtmultimedia | Status: ABANDONED | 0 | 0 |
| 607601,11 | Add the endOfStreamPolicy property to VideoOutput | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 607617,13 | Add the endOfStreamPolicy property to the Video qml element | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 634419,6 | Add the endOfStreamPolicy property to VideoOutput | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |